improve: add customer id namespacing
